--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "Helper/helpers.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
