--- a/.etc/docker/nginx/conf.d/default.conf
+++ b/.etc/docker/nginx/conf.d/default.conf
@@ -3,9 +3,6 @@ map $host $access_flag {
     default 0;
     localhost 1;
     127.0.0.1 1;
-    "api.dev.diversityatlas.com.au" 1;
-    "api.staging.diversityatlas.com.au" 1;
-    "api.edition.diversityatlas.com.au" 1;
 }
 
 map $http_x_forwarded_for $real_ip {
@@ -52,7 +49,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass snapp-test-nginx:9000;
+        fastcgi_pass snapp-test-app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
