fix(supervisor): modify needed command for processing the jobs in rabbit

--- a/.etc/docker/supervisor/supervisord.conf
+++ b/.etc/docker/supervisor/supervisord.conf
@@ -1,6 +1,6 @@
 [program:supervisord]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/html/artisan queue:work --queue=be_sensitive,be_high,be_medium,be_normal,email,create_cache,snapshot,system_logs --sleep=3 --tries=3 --max-time=3600
+command=php /var/www/html/artisan rabbitmq:consume --verbose --tries=2 --timeout=90
 autostart=true
 autorestart=true
 stopasgroup=true
