--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
@@ -18,9 +18,16 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=rabbitmq
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
+RABBITMQ_APP_PORT=5672
+RABBITMQ_HOST=snapp-test-rabbit
+RABBITMQ_PASSWORD=toor
+RABBITMQ_SSL=false
+RABBITMQ_SSL_VERIFY_PEER=false
+RABBITMQ_USER=root
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -50,3 +57,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SMS_API_KEY=
+SMS_SENDER=
